--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npx": "^10.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^2.1.5",
     "react-text-transition": "^1.3.0",
     "travis": "^0.1.1",
     "yarn": "^1.13.0"
