--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "Portfolio app",
   "name": "Portfolio app made with react as part of 'weekend projects' initiative",
-  "homepage": "https://https://sergeyneu.github.io/",
+  "homepage": "https://sergeyneu.github.io/",
   "icons": [
     {
       "src": "favicon.ico",
