--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,5 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"},
 	"eslintConfig": {
-		"extends": "react-app"},
+		"extends": "react-app"}
 }
